# autodb-agent

./: .env.example  .gitignore  main.py  pyproject.toml
app/: database.py  interfaces.py  models.py
app/agents/: document_processor.py
app/routers/: documents.py
app/services/: storage.py
