[project]
name = "autodb-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.8.1",
    "asyncio>=4.0.0",
    "boto3>=1.40.21",
    "fastapi>=0.116.1",
    "google-genai>=1.32.0",
    "motor>=3.7.1",
    "openai>=1.102.0",
    "pymongo>=4.14.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

